2018-03-06 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/bug-1981238.c: disabled new tests that fail on
	  host

2018-03-05 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCopt.c,
	  support/regression/tests/bug-2712.c:
	  Fix bug #2712.

2018-03-04 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/stm8/gen.c (emitCall): fix callf with literal
	* support/regression/tests/bug-1981238.c: added tests,
	  changed pad.b to 5 bits so the total is <= 8
	* support/regression/tests/memory.c: enabled test for ds390, mcs51-large
	  and mcs51-huge
	* device/lib/strtoul.c: fix warnings

2018-03-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCsymt.c:
	  Fix bug #2714.

2018-03-04 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/stm8.src/stm8.cc:
	  Fix bug #2694.
	* configure.ac,
	  configure,
	  src/Makefile.in,
	  sim/ucsim/cmd.src/Makefile.in:
	  Fix bug #2724.
	* src/SDCC.y,
	  src/SDCCerr.h,
	  src/SDCCerr.c,
	  src/SDCCsymt.c:
	  Fix bug #2720.

2018-02-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Implement calls through functions pointers via retpoline for stm8 large memory model (RFE #556).

2018-02-28 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Document stm8 memory models (RFE #556).
	* src/stm8/main.c,
	  src/stm8/gen.c:
	  Do not generate jump tables for stm8 large memory model (RFE #556).

2018-02-27 Philipp Klaus Krause <pkk AT spth.de>

	* sim/ucsim/stm8.src/inst.cc:
	  Fix handling of 16-bit and 17-bit jumps in simulator (RFE #556).
	* src/stm8/peep.c:
	  Improve handling of 24-bit jumps in peephole optimizer (RFE #556).
	* src/stm8/main.c,
	  src/stm8/gen.c:
	  Code generation for large memory model for stm8 (RFE #556).
	* support/regression/tests/memory.c:
	  Enable test for host.
	* src/stm8/peeph.def:
	  New peephole rules for large memory model (RFE #556).

2018-02-26 Philipp Klaus Krause <pkk AT spth.de>

	* .version,