@@ -1,3 +1,14 @@
+2018-03-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* support/regression/tests/bug-1981238.c,
+	  support/regression/tests/gcc-torture-execute-20141107-1.c,
+	  support/regression/tests/gcc-torture-execute-920711-1.c: Disable
+	  tests failing on PPC host
+	* support/regression/tests/gcc-torture-execute-20121108-1.c,
+	  support/regression/tests/gcc-torture-execute-pr79286.c: Don't
+	  define putchar when compiling for host
+    
+
 2018-03-06 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* support/regression/tests/bug-1981238.c: disabled new tests that fail on
